[gd_scene load_steps=9 format=2]

[ext_resource path="res://Source/Scripts/Enemy-01.gd" type="Script" id=1]
[ext_resource path="res://Source/Images/light_shadow_light.png" type="Texture" id=2]
[ext_resource path="res://Source/Images/EnemyImages/Enemy-01.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.8, 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15.4, 10.2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 1, 0.235294, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 46.5, 22 )

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -5.96046e-08
margin_top = -5.96046e-08
margin_right = 14.0
margin_bottom = 8.0
rect_scale = Vector2( 5, 5 )
texture = ExtResource( 3 )
expand = true

[node name="Enemy-01" type="Area2D" parent="."]
position = Vector2( 4, 5 )
scale = Vector2( 5, 5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Enemy-01"]
position = Vector2( 6.2, 3 )
scale = Vector2( 1, 1 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Enemy-01"]
position = Vector2( 6.2, 3.2 )
scale = Vector2( 1, 1 )
shape = SubResource( 1 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Enemy-01"]
position = Vector2( 6, 3.2 )
scale = Vector2( 1, 1 )
shape = SubResource( 1 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Enemy-01"]
position = Vector2( 6.4, 3.2 )
scale = Vector2( 1, 1 )
shape = SubResource( 1 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Enemy-01"]
position = Vector2( 6.2, 2.8 )
scale = Vector2( 1, 1 )
shape = SubResource( 1 )

[node name="MoveTowardsArea" type="Area2D" parent="."]
position = Vector2( 4, 5 )
scale = Vector2( 5, 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MoveTowardsArea"]
position = Vector2( 7, 2.2 )
scale = Vector2( 1, 1 )
shape = SubResource( 3 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 36, 12 )
scale = Vector2( 5, 5 )
texture = ExtResource( 2 )
texture_scale = 0.02
color = Color( 1, 0, 0, 1 )
energy = 2.0

[node name="HealthBar" type="ProgressBar" parent="."]
visible = false
margin_left = -9.0
margin_top = -17.0
margin_right = 78.0
margin_bottom = -3.0
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
step = 1.0
value = 100.0

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 35, 20 )
emitting = false
amount = 150
one_shot = true
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 3.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 200.0
initial_velocity_random = 0.6
scale_amount = 10.0
scale_amount_random = 0.5
color = Color( 0.482353, 0, 0, 1 )

[node name="MovementTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 34.5, 20 )
shape = SubResource( 6 )

[connection signal="area_entered" from="Enemy-01" to="." method="_on_Enemy01_area_entered"]
[connection signal="area_exited" from="Enemy-01" to="." method="_on_Enemy01_area_exited"]
[connection signal="area_entered" from="MoveTowardsArea" to="." method="_on_MoveTowardsArea_area_entered"]
[connection signal="area_exited" from="MoveTowardsArea" to="." method="_on_MoveTowardsArea_area_exited"]
[connection signal="timeout" from="MovementTimer" to="." method="_on_MovementTimer_timeout"]
